--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,8 @@
-<style type="text/css">
-h1 {
-	color: DeepSkyBlue;
-}
-</style>
-
-<h1>Hello, world!</h1>
+<html>
+<head>
+	<title>The Decision Support System</title>
+</head>
+<body>
+	<h1>Hello World</h1>
+</body>
+</html>
