--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>The Decision Support System</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Hello World</h1>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
