--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,11 @@
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<section>
+	<li><a href="#">London</a></li>
+    <li><a href="#">Paris</a></li>
+    <li><a href="#">Tokyo</a></li>
+</section>
 
 </body>
 </html>
