--- a/index.htm
+++ b/index.htm
@@ -6,9 +6,14 @@
 <body>
 
 <section>
-	<li><a href="#">London</a></li>
-    <li><a href="#">Paris</a></li>
-    <li><a href="#">Tokyo</a></li>
+	<ul>
+		<li><a href="#">Home</a></li>
+    	<li><a href="#">Crops</a></li>
+    	<li><a href="#">Season</a></li>
+    	<li><a href="#">Municipalities</a></li>
+    	<li><a href="#">GIS</a></li>
+    	<li><a href="#">Database</a></li>
+    <ul>
 </section>
 
 </body>
