--- a/index.htm
+++ b/index.htm
@@ -4,17 +4,17 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
 
-<section>
-	<ul>
-		<li><a href="#">Home</a></li>
-    	<li><a href="#">Crops</a></li>
-    	<li><a href="#">Season</a></li>
-    	<li><a href="#">Municipalities</a></li>
-    	<li><a href="#">GIS</a></li>
-    	<li><a href="#">Database</a></li>
-    <ul>
-</section>
+<div clas="">
+	<li><a href="#Home">Home</a></li>
+    <li><a href="#Crops">Crops</a></li>
+    <li><a href="#Season">Season</a></li>
+    <li><a href="#Municipalities">Municipalities</a></li>
+    <li><a href="#GIS">GIS</a></li>
+    <li><a href="#Database">Database</a></li>
+</div>
 
 </body>
 </html>
