--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 
-<div clas="">
+<div clas="leftpanel">
 	<li><a href="#Home">Home</a></li>
     <li><a href="#Crops">Crops</a></li>
     <li><a href="#Season">Season</a></li>
