--- a/index.htm
+++ b/index.htm
@@ -4,14 +4,17 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
 
-<ul>
-	<li><a class="active" href="#Home">Home</a></li>
+<div clas="leftpanel">
+	<li><a href="#Home">Home</a></li>
     <li><a href="#Crops">Crops</a></li>
     <li><a href="#Season">Season</a></li>
     <li><a href="#Municipalities">Municipalities</a></li>
     <li><a href="#GIS">GIS</a></li>
     <li><a href="#Database">Database</a></li>
-</ul>
+</div>
+
 </body>
 </html>
