--- a/Website/index.htm
+++ b/Website/index.htm
@@ -2,16 +2,24 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
+<style>
+	body{
+		font-family: 'Poppins';
+	}
+</style>
 
 <ul>
-	<li><a class="active" href="#Home">Home</a></li>
-    <li><a href="#Crops">Crops</a></li>
-    <li><a href="#Season">Season</a></li>
-    <li><a href="#Municipalities">Municipalities</a></li>
-    <li><a href="#GIS">GIS</a></li>
-    <li><a href="#Database">Database</a></li>
+	<h1><img src="seedling.png">DSS</h1>
+	<li><img src="Home logo.png"><a href="#Home" >Home</a></li>
+    <li><img src="Crops logo.png"><a href="#Crops">Crops</a></li>
+    <li><img src="Season logo.png"><a href="#Season">Season</a></li>
+    <li><img src="Municipality logo.png"><a href="#Municipalities">Municipalities</a></li>
+    <li><img src="GIS logo.png"><a href="#GIS">GIS</a></li>
+    <li><img src="Database logo.png"><a href="#Database">Database</a></li>
+
 </ul>
-</body>
+</body>	
 </html>
