--- a/index.htm
+++ b/index.htm
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\Website\style.css">
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<style>
+	body{
+		font-family: 'Poppins';
+	}
+</style>
 
-<div clas="leftpanel">
-	<li><a href="#Home">Home</a></li>
-    <li><a href="#Crops">Crops</a></li>
-    <li><a href="#Season">Season</a></li>
-    <li><a href="#Municipalities">Municipalities</a></li>
-    <li><a href="#GIS">GIS</a></li>
-    <li><a href="#Database">Database</a></li>
+<div class='leftcolumn'>
+	<ul>
+	<!--App Name-->
+		<h1><img src="images\seedling.png">DSS</h1>
+	<!--Navigation Bar--->
+		<li><img src="Home logo.png"><a href="#Home" >Home</a></li>
+    	<li><img src="Crops logo.png"><a href="#Crops">Crops</a></li>
+    	<li><img src="Season logo.png"><a href="#Season">Season</a></li>
+    	<li><img src="Municipality logo.png"><a href="#Municipalities">Municipalities</a></li>
+    	<li><img src="GIS logo.png"><a href="#GIS">GIS</a></li>
+    	<li><img src="Database logo.png"><a href="#Database">Database</a></li>
+	</ul>
 </div>
 
-</body>
+<!--Center page-->
+<div class='boxleft'>
+	<p>Crop production</p>
+</div>
+
+<div class='boxright'>
+	<p>Area of Farmland</p>
+</div>
+
+</body>	
 </html>
