--- a/index.htm
+++ b/index.htm
@@ -14,14 +14,14 @@
 <div class='leftcolumn'>
 	<ul>
 	<!--App Name-->
-		<h1><img src="images\seedling.png">DSS</h1>
+		<h1><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\seedling.png">DSS</h1>
 	<!--Navigation Bar--->
-		<li><img src="Home logo.png"><a href="#Home" >Home</a></li>
-    	<li><img src="Crops logo.png"><a href="#Crops">Crops</a></li>
-    	<li><img src="Season logo.png"><a href="#Season">Season</a></li>
-    	<li><img src="Municipality logo.png"><a href="#Municipalities">Municipalities</a></li>
-    	<li><img src="GIS logo.png"><a href="#GIS">GIS</a></li>
-    	<li><img src="Database logo.png"><a href="#Database">Database</a></li>
+		<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Home logo.png"><a href="#Home" >Home</a></li>
+    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Crops logo.png"><a href="#Crops">Crops</a></li>
+    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Season logo.png"><a href="#Season">Season</a></li>
+    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Municipality logo.png"><a href="#Municipalities">Municipalities</a></li>
+    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\GIS logo.png"><a href="#GIS">GIS</a></li>
+    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Database logo.png"><a href="#Database">Database</a></li>
 	</ul>
 </div>
 
