--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\Website\style.css">
+<link rel="stylesheet" href="Website\style.css">
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
@@ -14,14 +14,14 @@
 <div class='leftcolumn'>
 	<ul>
 	<!--App Name-->
-		<h1><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\seedling.png">DSS</h1>
+		<h1><img src="images\seedling.png">DSS</h1>
 	<!--Navigation Bar--->
-		<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Home logo.png"><a href="#Home" >Home</a></li>
-    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Crops logo.png"><a href="#Crops">Crops</a></li>
-    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Season logo.png"><a href="#Season">Season</a></li>
-    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Municipality logo.png"><a href="#Municipalities">Municipalities</a></li>
-    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\GIS logo.png"><a href="#GIS">GIS</a></li>
-    	<li><img src="C:\Users\Jeune\Documents\GitHub\The-Desicion-Support-System\images\Database logo.png"><a href="#Database">Database</a></li>
+		<li><img src="images\Home logo.png"><a href="#Home" >Home</a></li>
+    	<li><img src="images\Crops logo.png"><a href="#Crops">Crops</a></li>
+    	<li><img src="images\Season logo.png"><a href="#Season">Season</a></li>
+    	<li><img src="images\Municipality logo.png"><a href="#Municipalities">Municipalities</a></li>
+    	<li><img src="images\GIS logo.png"><a href="#GIS">GIS</a></li>
+    	<li><img src="images\Database logo.png"><a href="#Database">Database</a></li>
 	</ul>
 </div>
 
