--- a/Home.html
+++ b/Home.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/HomeCss.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Document</title>
 </head>
 <body>
+
+<style>
+    body{
+        font-family: 'Poppins';
+    }
+</style>
+
     <div class='LeftSide'>
 
         <div class='Logo'>
@@ -54,6 +62,15 @@
                 </li>
             </ul>
         </div>
+    </div>
+
+
+    <div class='boxleft'>
+        <p>Crop production</p>
+    </div>
+
+    <div class='boxright'>
+        <p>Area of Farmland</p>
     </div>
 </body>
 </html>
