--- a/Home.html
+++ b/Home.html
@@ -64,13 +64,25 @@
         </div>
     </div>
 
-
-    <div class='boxleft'>
-        <p>Crop production</p>
+    <div class='Greetings'>
+        <h1>The Decision Support System</h1>
+        <p>Insert relevant message here</p>
     </div>
 
-    <div class='boxright'>
-        <p>Area of Farmland</p>
+    <div class='CropProduction'>
+        <p>CROP PRODUCTION</p>
+    </div>
+
+    <div class='AreaOfFarmland'>
+        <p>AREA OF FARMLAND</p>
+    </div>
+
+    <div class='Weather'>
+        <p>WEATHER</p>
+    </div>
+
+    <div class='Forum'>
+        <p>FORUM</p>
     </div>
 </body>
 </html>
