--- a/Home.html
+++ b/Home.html
@@ -25,37 +25,37 @@
         <div class='Menu'>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="Home.Html">
                         <img src="ICONS/Home logo.png">
                         <span class="title">Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="HTML/Crop.html">
                         <img src="ICONS/Crops logo.png">
                         <span class="title">Crop</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="HTML/Season.html">
                         <img src="ICONS/Season logo.png">
                         <span class="title">Season</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="HTML/Municipalities.html">
                         <img src="ICONS/Municipality logo.png">
                         <span class="title">Municipality</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="HTML/GIS.html">
                         <img src="ICONS/GIS logo.png">
                         <span class="title">GIS</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="HTML/Database.html">
                         <img src="ICONS/Database logo.png">
                         <span class="title">Database</span>
                     </a>
