--- a/HTML/Crop.html
+++ b/HTML/Crop.html
@@ -67,5 +67,17 @@
     <div class='Greetings'>
         <h1>Crops Page</h1>
     </div>
+
+    <div class='HighlandCrops'>
+        <p>HIGHLAND CROPS</p>
+    </div>
+
+    <div class='CropsInfo'>
+        <p>VEGETABLE INFORMATION</p>
+    </div>
+
+    <div class='ProductionVolume'>
+        <p>PRODUCTION VOLUME</p>
+    </div>
 </body>
 </html>
