--- a/Home.html
+++ b/Home.html
@@ -17,6 +17,9 @@
         font-family: 'Poppins';
     }
 </style>
+
+<div class="row justify-content-start">
+ <div class='LeftSide'>
     <div class='LeftSide'>
 
         <div class='Logo'>
@@ -64,6 +67,8 @@
             </ul>
         </div>
     </div>
+ </div>
+</div>
 
     <div class='Greetings'>
         <h1>The Decision Support System</h1>
