--- a/HTML/Season.html
+++ b/HTML/Season.html
@@ -67,5 +67,13 @@
     <div class='Greetings'>
         <h1>Season Page</h1>
     </div>
+
+    <div class='YieldPattern'>
+        <p>CROP YIELD TREND  & PATTERN</p>
+    </div>
+
+    <div class='Month'>
+        <p>MONTH</p>
+    </div>
 </body>
 </html>
