--- a/HTML/Database.html
+++ b/HTML/Database.html
@@ -67,5 +67,9 @@
     <div class='Greetings'>
         <h1>Database Page</h1>
     </div>
+
+    <div class='Something'>
+        <p>INSERT TEXT HERE</p>
+    </div>
 </body>
 </html>
