--- a/HTML/Municipalities.html
+++ b/HTML/Municipalities.html
@@ -67,5 +67,13 @@
     <div class='Greetings'>
         <h1>Municipalities Page</h1>
     </div>
+
+    <div class='Location'>
+        <p>SELECT BENGUET MUNICIPALITY</p>
+    </div>
+
+    <div class='Something'>
+        <p>INSERT TEXT HERE</p>
+    </div>
 </body>
 </html>
