--- a/Home.html
+++ b/Home.html
@@ -78,6 +78,8 @@
 
     <div class='Weather'>
         <p>WEATHER</p>
+        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+        <div class="elfsight-app-340afb45-98b4-4c92-8da5-0b424b647dad"></div>
     </div>
 
     <div class='Forum'>
