--- a/Home.html
+++ b/Home.html
@@ -77,9 +77,10 @@
     </div>
 
     <div class='Weather'>
-        <p>WEATHER</p>
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-        <div class="elfsight-app-340afb45-98b4-4c92-8da5-0b424b647dad"></div>
+        <a class="weatherwidget-io" href="https://forecast7.com/en/16d40120d60/baguio/" data-label_1="BAGUIO CITY" data-label_2="WEATHER" >BAGUIO CITY WEATHER</a>
+        <script>
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+        </script>
     </div>
 
     <div class='Forum'>
