--- a/HTML/Crop.html
+++ b/HTML/Crop.html
@@ -70,6 +70,61 @@
 
     <div class='HighlandCrops'>
         <p>HIGHLAND CROPS</p>
+
+        <div class='CropsMenu'>
+            <ul>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Cabbage</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Potato</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Carrot</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Chinese Cabbage</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Sweet Peas</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Lettuse</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Bell Pepper</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Broccoli</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Cauli Flower</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="Clist">Tomato</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <div class='CropsInfo'>
