--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
         <div class='Menu'>
             <ul>
                 <li>
-                    <a href="Home.Html">
+                    <a class="active" href="Home.Html">
                         <img src="ICONS/Home logo.png">
                         <span class="title">Home</span>
                     </a>
