--- a/HTML/Crop.html
+++ b/HTML/Crop.html
@@ -100,7 +100,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <span class="Clist">Lettuse</span>
+                        <span class="Clist">Lettuce</span>
                     </a>
                 </li>
                 <li>
