--- a/HTML/Crop.html
+++ b/HTML/Crop.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Crop.html">
+                    <a class="active" href="Crop.html">
                         <img src="../ICONS/Crops logo.png">
                         <span class="title">Crop</span>
                     </a>
