--- a/HTML/Database.html
+++ b/HTML/Database.html
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Database.html">
+                    <a class="active" href="Database.html">
                         <img src="../ICONS/Database logo.png">
                         <span class="title">Database</span>
                     </a>
