--- a/HTML/GIS.html
+++ b/HTML/GIS.html
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="GIS.html">
+                    <a class="active" href="GIS.html">
                         <img src="../ICONS/GIS logo.png">
                         <span class="title">GIS</span>
                     </a>
