--- a/HTML/Municipalities.html
+++ b/HTML/Municipalities.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Municipalities.html">
+                    <a class="active" href="Municipalities.html">
                         <img src="../ICONS/Municipality logo.png">
                         <span class="title">Municipality</span>
                     </a>
