--- a/HTML/Season.html
+++ b/HTML/Season.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Season.html">
+                    <a class="active" href="Season.html">
                         <img src="../ICONS/Season logo.png">
                         <span class="title">Season</span>
                     </a>
@@ -68,15 +68,20 @@
         <h1>Season Page</h1>
     </div>
 
+
     <div class='YieldPattern'>
         <p>CROP YIELD TREND  & PATTERN</p>
+
+        <div id="Info">
+
+        </div>
     </div>
 
     <div class='Month'>
         <p>MONTH</p>
 
         <div class='MonthMenu'>
-            <ul>
+            <ul id="MonthList">
                 <li>
                     <a href="#">
                         <span class="Mlist">January</span>
@@ -141,5 +146,7 @@
         </div>
     </div>
     </div>
+
+    <script src="../JS/Seasons.js"></script>
 </body>
 </html>
