--- a/Home.html
+++ b/Home.html
@@ -77,20 +77,22 @@
         <p>AREA OF FARMLAND</p>
     </div>
 
-    <div class='WeatherCard'>
-        <div class="search">
-            <input type="text" class="search-bar" placeholder="Search">
-            <button>
-                <img src="ICONS/Search Icon.png" width="16em" height="16em">
-            </button>
-        </div>
-        <div class="weather">
-            <h2 class="city">Weather in Baguio City</h2>
-            <h1 class="temp">51°</h1>
-            <img src="" alt="" class="" />
-            <div class="description">Cloudy</div>
-            <div class="humidity">Humidity: 60%</div>
-            <div class="wind">Wind Speed: 6.2 km/h</div>
+    <div class='Weather'>
+        <div class="card">
+            <div class="search">
+                <input type="text" class="search-bar" placeholder="Search">
+                <button>
+                    <img src="ICONS/Search Icon.png" width="16em" height="16em">
+                </button>
+            </div>
+            <div class="weather">
+                <h2 class="city">Weather in Baguio City</h2>
+                <h1 class="temp">51°</h1>
+                <img src="" alt="" class="" />
+                <div class="description">Cloudy</div>
+                <div class="humidity">Humidity: 60%</div>
+                <div class="wind">Wind Speed: 6.2 km/h</div>
+            </div>
         </div>
     </div>
 
