--- a/Home.html
+++ b/Home.html
@@ -77,7 +77,7 @@
         <p>AREA OF FARMLAND</p>
     </div>
 
-    <div class='Weather'>
+    <div class='WeatherSection'>
         <div class="card">
             <div class="search">
                 <input type="text" class="search-bar" placeholder="Search">
