--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/HomeCss.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <script src="JS/script.js"></script>
+    <script src="JS/script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -88,8 +88,10 @@
             <div class="weather">
                 <h2 class="city">Weather in Baguio City</h2>
                 <h1 class="temp">51°</h1>
-                <img src="" alt="" class="" />
-                <div class="description">Cloudy</div>
+                <div class="flex">
+                    <img src="" alt="" class="icon" />
+                    <div class="description">Cloudy</div>
+                </div>
                 <div class="humidity">Humidity: 60%</div>
                 <div class="wind">Wind Speed: 6.2 km/h</div>
             </div>
