--- a/Index.html
+++ b/Index.html
@@ -17,12 +17,14 @@
                     <a>Project ANI</a>
                 </div>
                 <nav>
-                    <a href="#">Home</a>
-                    <a href="#">Crops</a>
-                    <a href="#">Seasons</a>
-                    <a href="#">Municipalities</a>
-                    <a href="#">GIS</a>
-                    <a href="#">Datasets</a>
+                    <ul>
+                        <li><a href="#" class="MMlist">Home</a></li>
+                        <li><a href="#" class="MMlist">Crops</a></li>
+                        <li><a href="#" class="MMlist">Seasons</a></li>
+                        <li><a href="#" class="MMlist">Municipalities</a></li>
+                        <li><a href="#" class="MMlist">GIS</a></li>
+                        <li><a href="#" class="MMlist">Datasets</a></li>
+                    </ul>
                 </nav>
             </div>
         </header>
@@ -34,9 +36,27 @@
     </div>
 
     <div class="Contents">
-        <div class="Items">
-            <h2>Contents</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
+        <div class="HomeContents">
+            <div class="Weather">
+                <h2>Weather</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
+            </div>
+
+            <div class="Chart">
+                <h2>Chart</h2>
+            </div>
+
+            <div class="AreaOfFarmland">
+                <h2>Area Of Farmland</h2>
+            </div>
+
+            <div class="Announcements">
+                <h2>Announcements</h2>
+            </div>
+        </div>
+
+        <div class="CropsContent">
+
         </div>
     </div>
 </body>
