--- a/Index.html
+++ b/Index.html
@@ -44,14 +44,17 @@
 
             <div class="Chart">
                 <h2>Chart</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
             </div>
 
             <div class="AreaOfFarmland">
                 <h2>Area Of Farmland</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
             </div>
 
             <div class="Announcements">
                 <h2>Announcements</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
             </div>
         </div>
 
