--- a/Index.html
+++ b/Index.html
@@ -38,8 +38,24 @@
     <div class="Contents">
         <div class="HomeContents">
             <div class="Weather">
-                <h2>Weather</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
+                <div class="card">
+                    <div class="search">
+                        <input type="text" class="search-bar" placeholder="Search">
+                        <button>
+                            <img src="ICONS/Search Icon.png" width="16em" height="16em">
+                        </button>
+                    </div>
+                    <div class="weather">
+                        <h2 class="city">Weather in Baguio City</h2>
+                        <h1 class="temp">51°</h1>
+                        <div class="flex">
+                            <img src="" alt="" class="icon" />
+                            <div class="description">Cloudy</div>
+                        </div>
+                        <div class="humidity">Humidity: 60%</div>
+                        <div class="wind">Wind Speed: 6.2 km/h</div>
+                    </div>
+                </div>
             </div>
 
             <div class="Chart">
