added crop features

--- a/Index.html
+++ b/Index.html
@@ -74,9 +74,99 @@
             </div>
         </div>
 
+
         <div class="CropsContent">
+            <div class="HighlandCrops">
+                <h2>Highland Crops</h2>
+
+                <div class='VegsMenu'>
+                    <ul id="VegsList">
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">Cabage</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">February</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">March</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">April</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">May</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">June</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">July</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">August</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">September</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">October</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Vlist">November</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="Mlist">December</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="VegtableInfo">
+
+            </div>
+
+        </div>
+
+        <div class="SeasonsContent">
+            <div class="Months">
+                <h2>Months</h2>
+            </div>
+
+            <div class="MonthInfo">
+
+            </div>
 
         </div>
     </div>
+
+
+
+
+    <script src="JS/js.js"></script>
 </body>
+<script src="JS/js.js"></script>
 </html>
