--- a/Index.html
+++ b/Index.html
@@ -83,62 +83,52 @@
                     <ul id="VegsList">
                         <li>
                             <a href="#">
-                                <span class="Vlist">Cabage</span>
+                                <span class="Vlist">Cabbage</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">February</span>
+                                <span class="Vlist">Potato</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">March</span>
+                                <span class="Vlist">Carrot</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">April</span>
+                                <span class="Vlist">Chinese Cabbage</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">May</span>
+                                <span class="Vlist">Sweat Peas</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">June</span>
+                                <span class="Vlist">Lettuce</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">July</span>
+                                <span class="Vlist">Bell Pepper</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">August</span>
+                                <span class="Vlist">Broccoli</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">September</span>
+                                <span class="Vlist">Cauli Flower</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="Vlist">October</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">November</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Mlist">December</span>
+                                <span class="Vlist">Tomato</span>
                             </a>
                         </li>
                     </ul>
