--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
                     <div class="search">
                         <input type="text" class="search-bar" placeholder="Search">
                         <button>
-                            <img src="ICONS/Search Icon.png" width="16em" height="16em">
+                            <img src="" width="16em" height="16em">
                         </button>
                     </div>
                     <div class="weather">
