--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
 
     <div class="Contents">
         <div class="HomeContents">
-            <div class="Weather">
+            <div class="WeatherSection">
                 <div class="card">
                     <div class="search">
                         <input type="text" class="search-bar" placeholder="Search">
@@ -47,7 +47,8 @@
                     </div>
                     <div class="weather">
                         <h2 class="city">Weather in Baguio City</h2>
-                        <h1 class="temp">51°</h1>
+                        <h1 class="temp">Temperature:</h1>
+                        <h1 class="temp1">51°</h1>
                         <div class="flex">
                             <img src="" alt="" class="icon" />
                             <div class="description">Cloudy</div>
