--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
                     <div class="search">
                         <input type="text" class="search-bar" placeholder="Search">
                         <button>
-                            <img src="" width="16em" height="16em">
+                            <img src="images/Search.png" width="25em" height="25em">
                         </button>
                     </div>
                     <div class="weather">
