--- a/Index.html
+++ b/Index.html
@@ -48,6 +48,7 @@
                     </div>
                     <div class="weather">
                         <h2 class="city">Weather in Baguio City</h2>
+                        <h1 class="temp">Temperature:</h1>
                         <h1 class="temp1">16.93°C</h1>
                         <div class="flex">
                             <img src="" alt="" class="icon" />
