--- a/Index.html
+++ b/Index.html
@@ -111,7 +111,7 @@
                 </div>
                 </div>
                 <div class="right">
-                    <img src="Images/Forecast.png" width="460px" height="450px">
+                    <img src="Images/weather.jpg" width="570vw" height="400vh">
                 </div>
         </div>
 
